# GhostTerm

./: .gitignore  .impeccable.md  .npmrc  README.md  RESEARCH.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: progress-module-ci.yml  release.yml
designs/: ghostterm-ui-concepts.html  habitat-grid-progress.html  habitat-grid-tools.html  habitat-grid-workspace.html
docs/superpowers/plans/: 2026-04-13-responsive-panel-scroll-implementation.md  2026-04-13-settings-center-terminal-implementation.md  2026-04-13-sidebar-accordion-and-add-project.md  2026-04-13-sidebar-grouped-projects-redesign-plan.md  2026-04-14-per-project-state-isolation.md  2026-04-16-search-feature-implementation.md  2026-04-17-p1-titlebar-tabs.md  2026-04-17-p2-python-sidecar.md  2026-04-18-p3-tools-full-feature.md  2026-04-18-p4-semantic-fields-full.md  2026-04-18-p4-workspace-v2-refactor.md
docs/superpowers/specs/: 2026-04-12-ghostterm-mvp-design.md  2026-04-12-ghostterm-mvp-implementation-plan.md  2026-04-13-responsive-panel-scroll-design.md  2026-04-13-settings-center-terminal-design.md  2026-04-13-sidebar-grouped-projects-redesign.md  2026-04-16-search-design.md  2026-04-17-titlebar-nav-tools-design.md  2026-04-18-p4-semantic-fields-design.md
e2e-tests/: package.json  pnpm-lock.yaml  tsconfig.json  wdio.conf.ts
e2e-tests/specs/: fs-watcher.test.ts  lifecycle.test.ts  live-ui-regression.test.ts  placeholder.test.ts  project-flow.test.ts  sidebar-dialogs.test.ts  terminal.test.ts  worktree.test.ts
scripts/: mock-update.json
server/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum  openapi.yaml  tools.go
server/cmd/server/: main.go
server/docs/: api.md  deployment.md
server/internal/api/: gen.go  router.go  router_test.go
server/internal/auth/: jwt.go  jwt_test.go  password.go  password_test.go
server/internal/config/: config.go  config_test.go
server/internal/cron/: deadline_check.go
server/internal/db/: guc.go  money.go  money_test.go  pool.go  tx.go
server/internal/services/: activity_cursor.go  activity_cursor_test.go  activity_service.go  activity_service_test.go  auth_service.go  customer_service.go  customer_service_test.go  effective_permissions_service.go  effective_permissions_service_test.go  feedback_service.go  (+21 more)
server/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_rls.down.sql  0002_rls.up.sql  0003_drop_customers_table.down.sql  0003_drop_customers_table.up.sql  0004_project_files_add_wechat_chat.down.sql  0004_project_files_add_wechat_chat.up.sql  0005_files_storage_path_drop_unique.down.sql  0005_files_storage_path_drop_unique.up.sql  0006_progress_timeline.down.sql  0006_progress_timeline.up.sql  0007_user_permissions.down.sql  0007_user_permissions.up.sql
src/: App.css  App.tsx  main.tsx
src-python/: .gitignore  build_sidecar.ps1  build_sidecar.sh  main.py  pyproject.toml
src-python/tests/: make_fixtures.py  test_extractor.py  test_handlers.py  test_handlers_v2.py  test_main_loop.py
src-python/tests/engine_v2/: test_checkers.py  test_detector.py  test_field_defs.py  test_fixer.py
src-python/tests/extractor/: test_field_matcher.py  test_gazetteer.py  test_patterns.py  test_pipeline_a.py  test_pipeline_attrs.py  test_pipeline_unsupported_attr.py  test_punct_space_detection.py  test_units.py
src-python/tests/fixtures/: cjk_space_bad.docx  cjk_space_clean.docx  spec_template_a.docx
src-python/tests/rules/: test_ai_pattern.py  test_chapter_new_page.py  test_citation_format.py  test_cjk_ascii_space.py  test_figure_table_caption.py  test_font_body.py  test_font_h1.py  test_pagination.py  test_paragraph_indent.py  test_quote_style.py
src-python/tests/utils/: test_size.py
src-python/thesis_worker/: __init__.py  __main__.py  extractor.py  handlers.py  models.py
src-python/thesis_worker/engine_v2/: checkers.py  detector.py  field_defs.py  fixer.py
src-python/thesis_worker/extractor/: __init__.py  field_matcher.py  gazetteer.py  patterns.py  pipeline.py  units.py
src-python/thesis_worker/rules/: __init__.py  ai_pattern.py  base.py  chapter_new_page.py  citation_format.py  cjk_ascii_space.py  figure_table_caption.py  font_body.py  font_h1.py  pagination.py  paragraph_indent.py  quote_style.py
src-python/thesis_worker/utils/: size.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup_cmd.rs  lib.rs  main.rs  sidecar.rs  template_cmd.rs  types.rs
src-tauri/src/fs_backend/: mod.rs  search.rs  security.rs  watcher.rs
src-tauri/src/git_backend/: mod.rs  worktree.rs
src-tauri/src/project_manager/: mod.rs  persistence.rs  session.rs
src-tauri/src/pty_manager/: auth.rs  bridge.rs  mod.rs  ws_server.rs
src-tauri/templates/: _builtin-gbt7714-v2.json  _builtin-gbt7714.json
src-tauri/tests/: backup_cmd.rs  template_cmd.rs
src/layouts/: AppLayout.tsx  ProjectWorkspace.tsx  WorkspaceRouter.tsx
src/test/: App.test.tsx  AppLayout.test.tsx  SettingsPage.test.tsx  TabNav.test.tsx  Terminal.test.tsx  WorkspaceRouter.test.tsx  designConceptSpec.test.ts  main.test.ts  settingsStore.test.ts  setup.ts  tab-switching.integration.test.tsx  tabStore.test.ts  terminalStore.test.ts  themeStore.test.ts  useFsEvents.test.ts  useTerminal.test.ts
(+350 files in other folders)
