[project]
name = "thesis-worker"
version = "0.1.0"
description = "GhostTerm Python sidecar: DOCX rule-based detection and fixing"
authors = [{name = "Atlas.oi"}]
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.2",
    "pdfplumber>=0.11.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pyinstaller>=6.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
