[package]
name = "ghostterm"
version = "0.2.9"
description = "GhostTerm - 轻量级代码编辑器 + 终端一体化工具，深度集成 Claude Code"
authors = ["Atlas.oi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ghostterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
# 在线自动更新 - 启动时检测 GitHub Releases 最新版本，引导用户安装
tauri-plugin-updater = "2"
# 进程操作 - 用于自动更新安装完成后重启应用
tauri-plugin-process = "2"

# 序列化/反序列化 - 用于 Tauri Commands 数据传输和持久化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时 - 用于 WebSocket server 和异步文件操作
tokio = { version = "1", features = ["full"] }

# PTY 管理 - 跨平台伪终端支持
portable-pty = "0.8"

# WebSocket - PTY 数据流传输
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# 文件系统监听 - 实时监听文件变化
notify = "7"

# 文件路径忽略规则 - .gitignore 等排除规则
ignore = "0.4"

# Git 操作 - 状态查询、暂存、Worktree 管理
# default-features = false 禁用 ssh/https/http2 网络 transport，移除 OpenSSL 依赖
# GhostTerm 只做本地 git 操作（status/stage/worktree），不需要任何网络传输
git2 = { version = "0.20", default-features = false }

# 系统路径工具 - 用于定位配置目录 (~/.config/ghostterm 等)
dirs = "6"

# 随机数 - 用于生成 WebSocket token
rand = "0.9"

# 全局静态变量初始化 - 用于 PTY 注册表（全局 HashMap）
lazy_static = "1"

# 字符编码检测 - 用于非 UTF-8 文件检测
chardetng = "0.1"

# MIME 类型检测 - 通过文件魔数（magic bytes）识别二进制文件类型
infer = "0.16"

# Base64 编码 - 用于图片文件读取后转为 data URL，供前端 <img> 直接渲染
base64 = "0.22"

# E2E 测试支持 - tauri-webdriver + WebdriverIO 集成（PBI-6 使用）
tauri-plugin-webdriver-automation = "0.1"
tauri-plugin-dialog = "2.7.0"

# macOS 原生 API - 用于 NSWindow 标题栏透明化（消除窗口四周留白）
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]
# 测试用临时目录 - 避免测试污染真实文件系统
tempfile = "3"
